--- a/module_1/board/templates/pages/contact.html
+++ b/module_1/board/templates/pages/contact.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <p>
-    email: dchan20@jhu.edu
+    Email: dchan20@jhu.edu
   <p>
     Connect with me on <a href="https://www.linkedin.com/in/daniellechan2023" target="_blank">LinkedIn</a>.
   </p>
