--- a/module_1/board/templates/pages/publications.html
+++ b/module_1/board/templates/pages/publications.html
@@ -6,6 +6,6 @@
 
 {% block content %}
   <p>
-    Publications will be listed here.
+    <a href="https://github.com/danielle-chan/jhu_software_concepts/tree/main/module_1" target="_blank">(Module 1) Personal Website</a>: A simple Flask web application demonstrating templates, routing, and static files to create my own personal website.
   </p>
 {% endblock content %}
