--- a/module_1/board/templates/pages/contact.html
+++ b/module_1/board/templates/pages/contact.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h2>{% block title %}Contact{% endblock title %}</h2>
+  <h2>{% block title %}Contact Information{% endblock title %}</h2>
 {% endblock header %}
 
 {% block content %}
-  <p>
-    Email: dchan20@jhu.edu
+  <p>Email: dchan20@jhu.edu</p>
   <p>
     Connect with me on <a href="https://www.linkedin.com/in/daniellechan2023" target="_blank">LinkedIn</a>.
   </p>
