--- a/module_5/src/templates/index.html
+++ b/module_5/src/templates/index.html
@@ -91,7 +91,6 @@
 
   <div class="analysis">
     <h3>How many students submitted a GRE score?</h3>
-    <i><p>Answer: {{ count_GRE }}</p></i>
+    <i><p>Answer: {{ count_gre }}</p></i>
   </div>
 {% endblock %}
-
